--- a/app/styles/single.styl
+++ b/app/styles/single.styl
@@ -54,25 +54,28 @@
 				text-decoration underline !important
 				color #666 !important
 	&-images
+		margin-right 20px
 		&-container
 			border 1px solid #ddd
 			padding 5px
 			margin-bottom 8px
-			cursor pointer
+			cursor zoom-in
 	&-icon
 		border-color #4000ff
 		background #4000ff
 		color #fff !important
 
-@media (max-width: 768px)
+@media (max-width: 999px)
 	.singleProduct
 		&-images
 			display flex
 			justify-content center
-			order 2
+			margin-right 0
 			&-container
 				margin-bottom 30px
 				margin-right 8px
+
+@media (max-width: 768px)
 		&-btn
 			padding: 12px 25% !important
 		&-description
