ecommerce-pilot progress2

--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -436,6 +436,7 @@
 		var more = {{more|json|safe}};
 		var products = {{products|json|safe}};
 		var similar = {{similar|json|safe}};
+		var work = {{work|json|safe}};
 		(function (d, s, id) {
 			var js;
 			var fjs = d.getElementsByTagName(s)[0];
