--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -195,90 +195,93 @@
 	{% if profile.isSeller %}
 
 
-	<div class="grid-container u-padding-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="discover-menu">
-				<div class="filter left" data-state="open">
-					<div class="am-Select">
-						CATEGORÍAS &nbsp;&nbsp;<i class="fa fa-caret-left"></i>
-					</div>
-					<div class="left-menu u-padding-top-10">
-						<div class="am-Filter filter-category">
-							<div class="am-Filter-item">
-								<header class="am-Filter-header">
-									<i class="fa fa-bars"></i><p>Ver sólo</p>
-								</header>
-							</div>
-							<div class="am-Filter-item">
-								<div class="am-Filter-switch">
-									<input type="checkbox" name="AM" id="AM"/>
-									<label for="AM">
-									  <div class="am-Switch-button">
-									  	<i class="fa fa-bars"></i>
-									  </div>
-									</label>
-									<span>Obras destacadas</span>
+	<div class="products-wrapper {% if currentPath !== 'products' %} hide {% endif %}">
+		
+		<div class="grid-container u-padding-top-20">
+			<div class="grid-100 grid-parent">
+				<div class="discover-menu">
+					<div class="filter left" data-state="open">
+						<div class="am-Select">
+							CATEGORÍAS &nbsp;&nbsp;<i class="fa fa-caret-left"></i>
+						</div>
+						<div class="left-menu u-padding-top-10">
+							<div class="am-Filter filter-category">
+								<div class="am-Filter-item">
+									<header class="am-Filter-header">
+										<i class="fa fa-bars"></i><p>Ver sólo</p>
+									</header>
 								</div>
-							</div>
-							<div class="am-Filter-item">
-								<header class="am-Filter-header">
-									<i class="fa fa-bars"></i><p>Categorías</p>
-								</header>
+								<div class="am-Filter-item">
+									<div class="am-Filter-switch">
+										<input type="checkbox" name="AM" id="AM"/>
+										<label for="AM">
+										  <div class="am-Switch-button">
+										  	<i class="fa fa-bars"></i>
+										  </div>
+										</label>
+										<span>Obras destacadas</span>
+									</div>
+								</div>
+								<div class="am-Filter-item">
+									<header class="am-Filter-header">
+										<i class="fa fa-bars"></i><p>Categorías</p>
+									</header>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="text navigation" style="text-align: center;">
-					<span class="am-navigation-text uppercase category-text" id="category"></span>
-					<span class="am-navigation-text uppercase order-text" id="order"></span>
-					<span class="am-navigation-text uppercase search-text hide" id="term"></span>
-					<span class="am-navigation-text uppercase featured-text hide" id="featured"></span>
-				</div>
-				<div class="filter right" data-state="closed">
-					<div class="am-Select">
-						ORDENAR &nbsp;&nbsp;<i class="fa fa-caret-down"></i>
+					<div class="text navigation" style="text-align: center;">
+						<span class="am-navigation-text uppercase category-text" id="category"></span>
+						<span class="am-navigation-text uppercase order-text" id="order"></span>
+						<span class="am-navigation-text uppercase search-text hide" id="term"></span>
+						<span class="am-navigation-text uppercase featured-text hide" id="featured"></span>
 					</div>
-					<div class="right-menu u-padding-top-10">
-						<div class="am-Filter filter-order">
+					<div class="filter right" data-state="closed">
+						<div class="am-Select">
+							ORDENAR &nbsp;&nbsp;<i class="fa fa-caret-down"></i>
+						</div>
+						<div class="right-menu u-padding-top-10">
+							<div class="am-Filter filter-order">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="discover-content products-wrapper grid-container u-padding-top-10 u-padding-bottom-70
-		{% if currentPath !== 'products' %} hide {% endif %}">
-		<div class="grid-100 grid-parent">
+		<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-70" data-state="expand">
+			<div class="grid-100 grid-parent">
 
-			{% if owner %}
-				<div class="empty-box bare-message hide">
-					<div class="empty-box-column right">
-						<i class=" bi_doc-documents"></i>
-						<p class="title u-margin-top-20">Pon en venta alguna de tus obras</p>
-						<a href="/" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+				{% if owner %}
+					<div class="empty-box bare-message hide">
+						<div class="empty-box-column right">
+							<i class=" bi_doc-documents"></i>
+							<p class="title u-margin-top-20">Pon en venta alguna de tus obras</p>
+							<a href="/" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+						</div>
 					</div>
-				</div>
-			</p>
-			{% else %}
-				<div class="empty-box bare-message hide">
-					<div class="empty-box-column right">
-						<i class=" bi_doc-documents"></i>
-						<p class="title u-margin-top-20">Aun no hay ningún producto</p>
-						<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
-						<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
-						<br>
-						<a href="/works/category/all/page-1" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+				{% else %}
+					<div class="empty-box bare-message hide">
+						<div class="empty-box-column right">
+							<i class=" bi_doc-documents"></i>
+							<p class="title u-margin-top-20">Aun no hay ningún producto</p>
+							<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
+							<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+							<br>
+							<a href="/works/category/all/page-1" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+						</div>
 					</div>
+
+				{% endif %}
+
+				<div class="grid products-container work-layout-discover">
+					<div class="grid-sizer"></div>
 				</div>
 
-			{% endif %}
-      <div class="grid products-container work-layout-discover">
-				<div class="grid-sizer"></div>
-      </div>
-			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
-			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
+				<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
+			</div>
 		</div>
+
 	</div>
 
 	{%endif%}
@@ -414,6 +417,14 @@
 		
 		var data = discover.data
 		console.log("data: ", data);
+
+		var s1 = data.url.substring(0, 21);
+		console.log("s1: ", s1)
+		
+		var s2 = data.url.substring(21, data.url.length);
+		console.log("s2: ", s2)
+
+		data.url = s1 + 'user/juliocanares/' + s2
 
 		$(function(){new APP.ProfileScreen();})
 	</script>
