--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -416,13 +416,13 @@
 		var discover = {{discoverData|json|safe}};
 		
 		var data = discover.data
-		console.log("data: ", data);
+		// console.log("data: ", data);
 
 		var s1 = data.url.substring(0, 21);
-		console.log("s1: ", s1)
+		// console.log("s1: ", s1)
 		
 		var s2 = data.url.substring(21, data.url.length);
-		console.log("s2: ", s2)
+		// console.log("s2: ", s2)
 
 		data.url = s1 + 'user/juliocanares/' + s2
 
