--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -444,6 +444,8 @@
 {% block scripts %}
 	<script>
 		var categories = {{categories|json|safe}};
+		console.log("categories: ", categories)
+		
 		var owner = {{owner|json|safe}};
 		var entity = {{entity|json|safe}};
 		var product = {{product|json|safe}};
