--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -1,4 +1,30 @@
 <script type="text/template" id="template-product">
+  
+  <!-- <div class="grid-item">
+      <div class="product-card">
+        <% if (owner) { %>
+          <div class="edit"><i class="bi_editorial-compose"></i></div>
+        <% } %>
+        <% if (viewer && viewer.isAdmin) { %>
+          <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+        <% } else { %>
+          <% if (featured) { %>
+            <div class="featured">AM</div>
+          <% } %>
+        <% } %>
+
+        <a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
+          {# <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>"> #}
+          <div class="product-card-image">
+            <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>">
+          </div>
+          <div class="product-card-price"><%= finalPrice %></div>
+          <div class="product-card-zoom" style="background-image: url('<%= addFilter(Work.photo, 'h_300,c_limit') %>')"></div>
+        </a>
+
+      </div>
+  </div> -->
+
   <div class="grid-item">
       <div class="product-card">
         <% if (owner) { %>
@@ -12,16 +38,20 @@
           <% } %>
         <% } %>
 
-
         <a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
-          {# <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>"> #}
           <div class="product-card-image">
             <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>">
           </div>
-          <div class="product-card-price"><%= finalPrice %></div>
-          <div class="product-card-zoom" style="background-image: url('<%= addFilter(Work.photo, 'h_300,c_limit') %>')"></div>
+          <div class="product-card-title">Catnip iPhone Case</div>
+          <div class="product-card-subtitle">por Andre Coronado</div>
+          <div class="product-card-price">
+            <span class="final">S/.<%= finalPrice %>.00</span>&nbsp;&nbsp;
+            <span class="original">S/.<%= price %>.00</span>
+          </div>
+          <!-- <div class="product-card-zoom" style="background-image: url('<%= addFilter(Work.photo,'h_300,c_limit') %>')"></div> -->
         </a>
 
       </div>
   </div>
+
 </script>
